--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 /* --- Contenedores con Posición Relativa --- */
-.welcome-screen-content, .search-screen-content, .species-screen-content, .detail-screen-content {
+.welcome-screen-content, .search-screen-content, .content-screen-content, .detail-screen-content {
     position: relative;
     text-align: center;
     padding: 2em;
@@ -166,6 +166,10 @@ button:hover {
 /* --- Estilos para la Pantalla Genérica de Contenido --- */
 .filter-container {
     margin-bottom: 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5em;
 }
 
 #content-filter-input {
@@ -176,6 +180,25 @@ button:hover {
     border: 2px solid #6b5c47;
     border-radius: 10px;
     background-color: #3d3d3d;
+    color: #e0d5a3;
+}
+
+#filter-phb24-btn {
+    font-family: inherit;
+    font-size: 0.8em;
+    padding: 0.5em 0.8em;
+    border: 2px solid #6b5c47;
+    border-radius: 10px;
+    background-color: #d1b897;
+    color: #4b3e34;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    box-shadow: 4px 4px 0px rgba(0, 0, 0, 0.2);
+    width: fit-content;
+}
+
+#filter-phb24-btn.active {
+    background-color: #4f4f4f;
     color: #e0d5a3;
 }
 
@@ -203,20 +226,6 @@ button:hover {
 
 .content-item:hover {
     background-color: #4f4f4f;
-}
-
-.back-btn {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    font-family: inherit;
-    font-size: 0.7em;
-    padding: 0.5em 0.8em;
-    border: 2px solid #6b5c47;
-    border-radius: 10px;
-    background-color: #3d3d3d;
-    color: #e0d5a3;
-    cursor: pointer;
 }
 
 /* --- Estilos para la Pantalla de Detalles --- */
